--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logoboss"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logoboss"
         android:supportsRtl="true"
         android:theme="@style/Theme.BossPAL">
-        <activity android:name=".ImportWallet.ImportWalletList"></activity>
+        <activity android:name=".SettingActivities.AddSecurity"></activity>
+        <activity android:name=".SettingActivities.PushNotification" />
+        <activity android:name=".SettingActivities.AddWallet" />
+        <activity android:name=".ImportWallet.ImportWalletList" />
         <activity android:name=".NewWallet.BackupWalletCode" />
         <activity android:name=".NewWallet.BackupWallet" />
         <activity android:name=".StartingScreen.OnBoardingScreen" />
