--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/logoboss"
         android:supportsRtl="true"
         android:theme="@style/Theme.BossPAL">
-        <activity android:name=".NewWallet.QrCodeActivity"></activity>
+        <activity android:name=".SettingActivities.AboutActivity" />
+        <activity android:name=".NewWallet.QrCodeActivity" />
         <activity android:name=".Common.FilterActivity" />
         <activity android:name=".Common.NotificationActivity" />
         <activity android:name=".WalletList.HaveWalletActivity" />
